--- a/failai/failai.csproj
+++ b/failai/failai.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{6BFC7A24-7E55-42FB-A1E4-A8F432CC043E}</ProjectGuid>
+    <ProjectGuid>{468CDEB2-FD75-4E8A-8451-FDD55B837257}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>GUI_test</RootNamespace>
-    <AssemblyName>GUI_test</AssemblyName>
+    <RootNamespace>failai</RootNamespace>
+    <AssemblyName>failai</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -45,34 +45,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Automobilis.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="GautiDuomenysForma.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="GautiDuomenysForma.Designer.cs">
-      <DependentUpon>GautiDuomenysForma.cs</DependentUpon>
-    </Compile>
-    <Compile Include="IvestiForma.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="IvestiForma.Designer.cs">
-      <DependentUpon>IvestiForma.cs</DependentUpon>
-    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="GautiDuomenysForma.resx">
-      <DependentUpon>GautiDuomenysForma.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="IvestiForma.resx">
-      <DependentUpon>IvestiForma.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
